test/compile-errors/name-not-found.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [
		struct(
			range(0, 24)
			""
			true
			[]
			none
			record(
				none
				[
					field(range(10, 13), false, f, inststruct(range(12, 13), name-range(12, t)))
					field(
						range(15, 22)
						false
						h
						inststruct(range(17, 22), name-range(17, arr), [inststruct(range(21, 22), name-range(21, x))]))]))
		struct(range(24, 36), "", true, [], none, union([member(t, none)]))]
	funs: [
		fun-decl(
			public: true
			sig: sig-ast(range(36, 43), foo, inststruct(range(40, 41), name-range(40, t)), [])
			body: seq-ast(seq-ast(x, call(infix, name-range(50, y), [], [a])), call(infix, name-range(55, z), [], [a, b])))])
